updates to css and spelling, image compression

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 	
 	<head>
-		<title>Karasik Fox - pour la joie de vivre</title>
-
-		<meta charset="utf-8" />
-		<meta name="description" content="A parallax scrolling experiment using jQuery" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>Karasik Fox - Exhilarating Software and Financial Solutions</title>
+		<meta http-equiv="Content-Language" content="en">
+		<meta name="description" content="Karasik Fox - Exhilarating Software and Financial Solutions - Portfolio management, software engineering, global consulting. Let us help you win.">
+		<meta name="keywords" content="Exhilarating, Software, Financial, Solutions, synergy, global, consulting, mobile, cloud, precision, strategy">
 
 		<link rel="stylesheet" media="all" href="css/main.css" />
 
@@ -15,6 +16,19 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script> 
 		<script>!window.jQuery && document.write('<script src="/js/jquery-1.6.1.min.js"><\/script>')</script>
 		<script src="js/parallax.js"></script>
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-21080013-4']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 	</head>
 
 	<body>
@@ -45,7 +59,7 @@
 					<header>
 						<h1>Karasik Fox</h1>
 					</header>
-					<h3>Delivering Exhilerating Financial &amp; Software Solutions.</h3>
+					<h3>Delivering Exhilarating Financial &amp; Software Solutions.</h3>
 					<nav class="next-prev" >
 						<a id="home-nav" class="next sailing" href="#sailing">&gt;</a>
 					</nav>
@@ -67,7 +81,7 @@
 					<header>
 						<h2>Precision software engineering.</h2>
 					</header>
-					<h3>At the limit there is no room for downtime and system failures. Mobile or cloud, we deliver scaleability.</h3>
+					<h3>At the limit there is no room for downtime and system failures. Mobile or cloud, we deliver scalability.</h3>
 					<nav class="next-prev">
 						<a class="prev sailing" href="#sailing">&lt;</a>
 					
@@ -90,7 +104,7 @@
 					<header>
 						<h2>A global strategic partner.</h2>
 					</header>
-					<h3>From New York to Hong Kong. A rich global perspective to achive synergies in a changing world.</h3>
+					<h3>From New York to Hong Kong. A rich global perspective to achieve synergies in a changing world.</h3>
 					<nav class="next-prev">
 						<a class="prev mountain" href="#mountain">&lt;</a>
 						<a class="next joy" href="#joy">&gt;</a>
@@ -100,7 +114,7 @@
 				<article id="joy">
 
 				</article>
-<div id="info"><center>How can we help you achieve pure exhileration?<p>
+<div id="info"><center>How can we help you achieve pure exhilaration?<p>
 Tell us at <a href="mailto:win@karasikfox.com">win@karasikfox.com</a></center></div>	
 
 
